--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
-*.csv
-*.tsv
-*.xml
-*.bak
-*.bck
-*.000
-*.kicad_pcb-bak
-*~
-_autosave-*
-*.tmp
-*-rescue.lib
-*-save.pro
-*-save.kicad_pcb
-*.net
-*.dsn
-*.ses
-fp-info-cache
+**/*.csv
+**/*.tsv
+**/*.xml
+**/*.bak
+**/*-bak
+**/*.bck
+**/*.000
+**/*.kicad_pcb-bak
+**/*~
+**/_autosave-*
+**/*.tmp
+**/*-rescue.lib
+**/*-save.pro
+**/*-save.kicad_pcb
+**/*.net
+**/*.dsn
+**/*.ses
+**/fp-info-cache
